--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </header>
 
         <main class="content">
+            <a href="exo.php" style="color: red;">Conversion exercise</a>
             <label class="switch">
                 <input type="checkbox">
                 <span class="slider round"></span>
