added registration, insertion in db (issue: get error on search at first load)

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 			>
 				<a href="exo.php" style="color: red">Conversion exercise</a>
 				<a href="search.php" style="color: red">Search exercise</a>
+				<a href="registration.php" style="color: red"
+					>Register exercise</a
+				>
 				<label class="switch">
 					<input type="checkbox" />
 					<span class="slider round"></span>
