--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 				<a href="registration.php" style="color: red"
 					>Register exercise</a
 				>
+				<a href="login.php" style="color: red">Login exercise</a>
 				<label class="switch">
 					<input type="checkbox" />
 					<span class="slider round"></span>
