--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 					>Register exercise</a
 				>
 				<a href="login.php" style="color: red">Login exercise</a>
+				<a href="mail.php" style="color: red">Mail exercise</a>
 				<label class="switch">
 					<input type="checkbox" />
 					<span class="slider round"></span>
